service.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel-ui-service
  labels:
    app: hotel-ui
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000
  selector:
    app: hotel-ui
